--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,8 +1,10 @@
 /* ==== Google font ==== */
-//@import url('http://fonts.googleapis.com/css?family=Lato:400,300,700,900');
+/
+/
+@import url('http://fonts.googleapis.com/css?family=Lato:400,300,700,900');
 
 body {
-  background-color: #f2f2f2;
+    background-color: #f2f2f2;
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     font-size: 16px;
@@ -19,23 +21,22 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-	font-size: 40px;
+    font-size: 40px;
 }
 
 h3 {
-	font-weight: 400;
+    font-weight: 400;
 }
 
 h4 {
-	font-weight: 400;
-	font-size: 20px;
+    font-weight: 400;
+    font-size: 20px;
 }
 
 p {
     margin-bottom: 20px;
     font-size: 16px;
 }
-
 
 a {
     color: #d6ee18;
@@ -66,6 +67,7 @@ a:after {
 .alignleft {
     text-align: left;
 }
+
 .alignright {
     text-align: right;
 }
@@ -74,51 +76,55 @@ a:after {
     text-align: center;
 }
 
-.btn-theme  {
-  color: #fff;
-  background-color: #fd680e;
-  border-color: #fd680e;
-}
-.btn-theme:hover  {
-  color: #fff;
-  background-color: #444;
-  border-color: #444;
-}
-form.signup {
-	margin-top: 30px;
-}
-form.signup button.btn {
-	text-transform: uppercase;
-	font-weight: 700;
-}
-form.signup input.form-control:focus {
-	border-color: #fd680e;
+.btn-theme {
+    color: #fff;
+    background-color: #fd680e;
+    border-color: #fd680e;
 }
 
+.btn-theme:hover {
+    color: #fff;
+    background-color: #444;
+    border-color: #444;
+}
+
+form.signup {
+    margin-top: 30px;
+}
+
+form.signup button.btn {
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+form.signup input.form-control:focus {
+    border-color: #fd680e;
+}
 
 /* Nav */
 
 a.navbar-brand {
-	color: #fff !important;
-	font-weight: 900;
-	text-transform: uppercase;
+    color: #fff !important;
+    font-weight: 900;
+    text-transform: uppercase;
 }
+
 a.navbar-brand:hover {
     color: #ddd !important;
 }
 
 /* Header */
 
-#header {	
-	background-color: #444;
-	background: url(../img/main-bg.jpg) no-repeat center top;
-	margin-top: -20px;
-	padding-top: 150px;
-	background-attachment: relative;
-	background-position: center center;
-	min-height: 650px;
-	width: 100%;
-	
+#header {
+    background-color: #444;
+    background: url(../img/main-bg.jpg) no-repeat center top;
+    margin-top: -20px;
+    padding-top: 150px;
+    background-attachment: relative;
+    background-position: center center;
+    min-height: 650px;
+    width: 100%;
+
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
@@ -130,67 +136,67 @@ a.navbar-brand:hover {
     background-size: cover;
 }
 
-
-
 #header h1 {
-	margin-bottom: 15px;
-	color: #fff;
-	font-size: 45px;
-	font-weight: 900;
-	letter-spacing: -1px;
+    margin-bottom: 15px;
+    color: #fff;
+    font-size: 45px;
+    font-weight: 900;
+    letter-spacing: -1px;
 }
 
 h2.subtitle {
-	color: #fff;
-	font-size: 20px;
+    color: #fff;
+    font-size: 20px;
 }
 
 /* slide */
 .carousel-indicators {
-  position: absolute;
-  bottom: -40px;
-  left: 50%;
-  z-index: 15;
-  width: 60%;
-  padding-left: 0;
-  margin-left: -50%;
-  text-align: center;
-  list-style: none;
+    position: absolute;
+    bottom: -40px;
+    left: 50%;
+    z-index: 15;
+    width: 60%;
+    padding-left: 0;
+    margin-left: -50%;
+    text-align: center;
+    list-style: none;
 }
+
 .carousel-indicators li {
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  margin: 1px;
-  text-indent: -999px;
-  cursor: pointer;
-  background-color: #000 \9;
-  background-color: #fff;
-  border: 1px solid #fff;
-  border-radius: 10px;
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    margin: 1px;
+    text-indent: -999px;
+    cursor: pointer;
+    background-color: #000 \9;
+    background-color: #fff;
+    border: 1px solid #fff;
+    border-radius: 10px;
 }
+
 .carousel-indicators .active {
-  width: 12px;
-  height: 12px;
-  margin: 0;
-  background-color: #b7cb1b;
+    width: 12px;
+    height: 12px;
+    margin: 0;
+    background-color: #b7cb1b;
 }
 
 /* footer */
 #footer {
-	background: #fd680e;
-	padding: 20px 0 5px;
+    background: #fd680e;
+    padding: 20px 0 5px;
 }
 
 p.copyright {
-	color: #fff;
-	text-align: center;
+    color: #fff;
+    text-align: center;
 }
 
-/*==================*/
+/*=========================================================*/
 #binding-name {
-	width : 300px;
-	height : 3em;
+    width: 300px;
+    height: 3em;
 }
 
 #welcome {
@@ -201,30 +207,58 @@ p.copyright {
 }
 
 #room-main {
-	margin-top: -80px;
-	color: #eee;
+    margin-top: -80px;
+    color: #eee;
 }
 
+a.reservation-link {
+    border: #bbbbbb solid 1px;
+    padding: 6px 20px;
+}
+
+a.reservation-link:hover {
+    background-color: #333;
+}
+
+a.reservation-link.reserved {
+    background-color: #fd680e;
+    color: #080808;
+    font-weight: bold;
+}
+
+a.reservation-link.canrevert {
+    background-color: #00d6b2;
+    color: #080808;
+    font-weight: bold;
+}
+
+a.reservation-link.disabled {
+    color: #ccc;
+    background-color: #333;
+}
+
+/*----------------------------------------------------*/
+
 .opacity-60 {
-	filter:alpha(Opacity=60);
-	-moz-opacity:0.6;
-	opacity: 0.6;
+    filter: alpha(Opacity=60);
+    -moz-opacity: 0.6;
+    opacity: 0.6;
 }
 
 .opacity-80 {
-	filter:alpha(Opacity=80);
-	-moz-opacity:0.8;
-	opacity: 0.8;
+    filter: alpha(Opacity=80);
+    -moz-opacity: 0.8;
+    opacity: 0.8;
 }
 
 .bg-color-000 {
-	background-color:#000;
+    background-color: #000;
 }
 
 .bg-color-eee {
-	background-color:#eee;
+    background-color: #eee;
 }
 
 .padding-30 {
-	padding: 30px;
+    padding: 30px;
 }
