remove useless file

--- a/app/partials/meeting-room.html
+++ b/app/partials/meeting-room.html
@@ -2,7 +2,7 @@
     <div class="room-header">
         date: 2015-07-25
     </div>
-    <div class="room-contain" ng-view>
+    <div class="room-contain">
         <table class="table">
             <thead>
             <th ng-repeat="room in reservations.rooms">{{room.name}}</th>
