--- a/app/views/admin.login.htm
+++ b/app/views/admin.login.htm
@@ -15,14 +15,17 @@
                         <form id="admin-login-form" role="form">
                             <div class="form-group">
                                 <label for="txt-name">用户名：</label>
-                                <input type="text" class="form-control" name="name" id="txt-name" placeholder="user name" value="">
+                                <input type="text" class="form-control" name="name" id="txt-name" placeholder="name" value="">
                             </div>
                             <div class="form-group">
                                 <label for="txt-pwd">密码：</label>
-                                <input type="text" class="form-control" name="pwd" id="txt-pwd" placeholder="例：前台右侧" value="">
+                                <input type="text" class="form-control" name="pwd" id="txt-pwd" placeholder="password" value="">
                             </div>
                             <div class="form-group">
                                 <a href="javascript:;" onclick="login()">登录</a>
+                            </div>
+                            <div class="form-group danger" id="login-message">
+                                
                             </div>
                         </form>
                     </div>
