--- a/app/views/user/signup.template.htm
+++ b/app/views/user/signup.template.htm
@@ -1,12 +1,13 @@
 <script type="text/html" id="template-signup">
     <div class="col-lg-6 col-lg-offset-3 opacity-80 bg-color-000 padding-30">
-        <h1>欢迎光临</h1>
+        <h1>欢迎使用</h1>
 
-        <h2 class="subtitle">新客到……，怎么称呼您呢？</h2>
+        <h4 class="subtitle">您的IP是：<span id="ip-text"></span></h4>
+        <h2 class="subtitle">请输入您的称呼</h2>
 
         <form class="form-inline signup" role="form">
             <div class="form-group">
-                <input type="input" class="form-control" id="binding-name" placeholder="输入你的英文名或中文名"/>
+                <input type="input" class="form-control" id="binding-name" placeholder="ex: amy.lin" />
                 <a href="javascript:void(0);" id="btn-sign-up" class="btn btn-theme">Sing up NOW</a>
             </div>
             <div></div>
