--- a/app/views/admin.htm
+++ b/app/views/admin.htm
@@ -30,10 +30,10 @@
         </div>
 
         <%include './common/common.js.htm'%>
-            <script src="/js/room.manage.js"></script>
-            <script src="/js/user.manage.js"></script>
-            <script src="/js/reservation.manage.js"></script>
-            <script src="/js/admin.js"></script>
+            <script src="/js/room.manage.js?v=<%version%>"></script>
+            <script src="/js/user.manage.js?v=<%version%>"></script>
+            <script src="/js/reservation.manage.js?v=<%version%>"></script>
+            <script src="/js/admin.js?v=<%version%>"></script>
 </body>
 
 </html>
