--- a/app/views/common/common.js.htm
+++ b/app/views/common/common.js.htm
@@ -1,6 +1,6 @@
-<script src="/plugin/jquery/dist/jquery.min.js"></script>
-<script src="/plugin/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="/plugin/datetimepicker/jquery.datetimepicker.js"></script>
-<script src="/plugin/template/template.js"></script>
-<script src="/plugin/template/template-helper.js"></script>
-<script src="/js/common.js"></script>
+<script src="/plugin/jquery/dist/jquery.min.js?v=<%version%>"></script>
+<script src="/plugin/bootstrap/dist/js/bootstrap.min.js?v=<%version%>"></script>
+<script src="/plugin/datetimepicker/jquery.datetimepicker.js?v=<%version%>"></script>
+<script src="/plugin/template/template.js?v=<%version%>"></script>
+<script src="/plugin/template/template-helper.js?v=<%version%>"></script>
+<script src="/js/common.js?v=<%version%>"></script>
