--- a/app/views/index.htm
+++ b/app/views/index.htm
@@ -44,6 +44,6 @@
         <%include './user/signup.template.htm'%>
             <%include './reservation/reservation.template.htm'%>
                 <%include './common/common.js.htm'%>
-                    <script src="/js/home.js"></script>
+                    <script src="/js/home.js?v=<%version%>"></script>
 </body>
 </html>
