--- a/app/views/admin.login.htm
+++ b/app/views/admin.login.htm
@@ -33,7 +33,7 @@
             </div>
         </div>
         <%include './common/common.js.htm'%>
-            <script src="/js/admin.js"></script>
+            <script src="/js/admin.js?v=<%version%>"></script>
 </body>
 
 </html>
