--- a/app/views/common/navbar.htm
+++ b/app/views/common/navbar.htm
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse navbar-fixed-top">
+<div class="navbar navbar-inverse navbar-fixed-top opacity-90">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -6,12 +6,24 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="">会议室预订系统</a>
+            <a class="navbar-brand" href="/">会议室预订系统</a>
         </div>
         <div class="navbar-collapse collapse">
             <div class="nav navbar-nav navbar-right" id="welcome">
-                欢迎- <span id="userName"></span>
+                <ul class="nav" style="display:inline-block;">
+                    <li role="presentation" class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                 欢迎- <span id="userName"></span> <span class="caret"></span>
+                         </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="/admin">管理员</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </div>
+
     </div>
 </div>
