--- a/app/views/reservation/reservation.template.htm
+++ b/app/views/reservation/reservation.template.htm
@@ -2,7 +2,7 @@
     <table class="table">
         <thead>
         {{each rooms as room}}
-        <th>{{room.name}}</th>
+        <th class="th-header">{{room.name}}</th>
         {{/each}}
         </thead>
         <tbody>
