--- a/app/views/admin.login.htm
+++ b/app/views/admin.login.htm
@@ -10,22 +10,22 @@
     <%include './common/navbar.htm'%>
         <div id="header">
             <div class="container">
-                <div class="row">
-                    <div class="col-offset-4 col-md-4">
+                <div class="row" style="width:350px; margin:0 auto;">
+                    <div>
                         <form id="admin-login-form" role="form">
                             <div class="form-group">
-                                <label for="txt-name">用户名：</label>
+                                <label for="txt-name">账号：</label>
                                 <input type="text" class="form-control" name="name" id="txt-name" placeholder="name" value="">
                             </div>
                             <div class="form-group">
                                 <label for="txt-pwd">密码：</label>
-                                <input type="text" class="form-control" name="pwd" id="txt-pwd" placeholder="password" value="">
+                                <input type="password" class="form-control" name="pwd" id="txt-pwd" placeholder="password" value="">
                             </div>
                             <div class="form-group">
-                                <a href="javascript:;" onclick="login()">登录</a>
+                                <a href="javascript:;" onclick="login()" class="btn btn-warning btn-login">登录</a>
                             </div>
-                            <div class="form-group danger" id="login-message">
-                                
+                            <div class="form-group">
+                                <div id="login-message" class="text-info text-danger"></div>
                             </div>
                         </form>
                     </div>
