--- a/app/views/index.htm
+++ b/app/views/index.htm
@@ -13,7 +13,7 @@
             <div class="container">
                 <div class="row" id="main-container"></div>
                 <div class="row" id="main-container-reservation" style="display:none;">
-                    <div id="room-main" class="col-lg-12 opacity-80 bg-color-000 padding-30">
+                    <div id="room-main" class="col-lg-12 opacity-90 bg-color padding-30">
                         <div class="room-header">
                             Date:
                             <input type="text" value="" id="txt-date" readonly="readonly" /> Interval:
