--- a/app/views/admin.login.htm
+++ b/app/views/admin.login.htm
@@ -10,7 +10,7 @@
     <%include './common/navbar.htm'%>
         <div id="header">
             <div class="container">
-                <div class="row" style="width:350px; margin:0 auto;">
+                <div class="row bg-color padding-30 radius" style="width:350px; margin:0 auto;">
                     <div>
                         <form id="admin-login-form" role="form">
                             <div class="form-group">
