--- a/app/views/admin/reservation.div.htm
+++ b/app/views/admin/reservation.div.htm
@@ -1,9 +1,9 @@
 <div id="reservation-manage">
 	<div>
-		Date:
-		<a href="javasdcript:;" onclick="changeDay(-1);">前</a>
+		日期:
+		<a href="javasdcript:;" onclick="changeDay(-1);"><<<<<</a>
 		<input type="text" value="" id="txt-reservation-date" readonly="readonly" />
-		<a href="javasdcript:;" onclick="changeDay(1);">后</a>
+		<a href="javasdcript:;" onclick="changeDay(1);">>>>>></a>
 	</div>
 	<table class="table">
 		<thead>
