--- a/app/views/common/common.js.htm
+++ b/app/views/common/common.js.htm
@@ -3,4 +3,5 @@
 <script src="/plugin/datetimepicker/jquery.datetimepicker.js?v=<%version%>"></script>
 <script src="/plugin/template/template.js?v=<%version%>"></script>
 <script src="/plugin/template/template-helper.js?v=<%version%>"></script>
+<script src="/plugin/c-split-bar/c-split-bar.jquery.js?v=<%version%>"></script>
 <script src="/js/common.js?v=<%version%>"></script>
