--- a/app/views/common/navbar.htm
+++ b/app/views/common/navbar.htm
@@ -12,7 +12,7 @@
             <div class="nav navbar-nav navbar-right" id="welcome">
                 <ul class="nav" style="display:inline-block;">
                     <li role="presentation" class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                        <a class="dropdown-toggle nav-welecom" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                                  欢迎- <span id="userName"></span> <span class="caret"></span>
                          </a>
                         <ul class="dropdown-menu">
