--- a/app/views/admin.htm
+++ b/app/views/admin.htm
@@ -14,17 +14,21 @@
                 <li class="active"><a data-toggle="tab" href="#roomManage">会议室管理</a></li>
                 <li><a data-toggle="tab" href="#userManage">用户管理</a></li>
                 <li><a data-toggle="tab" href="#reservationManage">预定管理</a></li>
+                 <li><a data-toggle="tab" href="#pwdManage">密码修改</a></li>
             </ul>
 
             <div class="tab-content" id="adminTabContent">
-                <div class="tab-pane active" id="roomManage">
+                <div class="tab-pane active bg-color padding-30" id="roomManage">
                     <%include './admin/room.div.htm'%>
                 </div>
-                <div class="tab-pane" id="userManage">
+                <div class="tab-pane bg-color padding-30" id="userManage">
                     <%include './admin/user.div.htm'%>
                 </div>
-                <div class="tab-pane" id="reservationManage">
+                <div class="tab-pane bg-color padding-30" id="reservationManage">
                     <%include './admin/reservation.div.htm'%>
+                </div>
+                 <div class="tab-pane bg-color padding-30" id="pwdManage">
+                    <%include './admin/changepassword.div.htm'%>
                 </div>
             </div>
         </div>
@@ -33,6 +37,7 @@
             <script src="/js/room.manage.js?v=<%version%>"></script>
             <script src="/js/user.manage.js?v=<%version%>"></script>
             <script src="/js/reservation.manage.js?v=<%version%>"></script>
+             <script src="/js/admin.pwd.js?v=<%version%>"></script>
             <script src="/js/admin.js?v=<%version%>"></script>
 </body>
 
