--- a/app/views/common/common.css.htm
+++ b/app/views/common/common.css.htm
@@ -1,3 +1,4 @@
 <link rel="stylesheet" href="/plugin/bootstrap/dist/css/bootstrap.min.css?v=<%version%>">
 <link rel="stylesheet" href="/plugin/datetimepicker/jquery.datetimepicker.css?v=<%version%>">
+<link rel="stylesheet" href="/plugin/c-split-bar/c-split-bar.css?v=<%version%>">
 <link rel="stylesheet" href="/css/main.css?v=<%version%>">
