--- a/app/views/index.htm
+++ b/app/views/index.htm
@@ -13,37 +13,23 @@
             <div class="container">
                 <div class="row" id="main-container"></div>
                 <div class="row" id="main-container-reservation" style="display:none;">
-                    <div id="room-main" class="col-lg-12 opacity-90 bg-color padding-30">
+                    <div id="room-main" class="col-lg-12 room-reserv opacity-90 bg-color padding-10">
                         <div class="room-header">
-                            Date:
-                            <input type="text" value="" id="txt-date" readonly="readonly" /> Interval:
-                            <select id="slt-interval">
-                                <option value="5">5分钟</option>
-                                <option value="15">15分钟</option>
-                                <option value="30">30分钟</option>
-                                <option value="45">45分钟</option>
-                                <option value="60" selected="selected">1小时</option>
-                                <option value="90">1.5小时</option>
-                                <option value="120">2小时</option>
-                            </select>
+                            日期:
+                            <input type="text" value="" id="txt-date" readonly="readonly" /> 
                         </div>
-                        <div class="room-contain" id="room-reservation-list">
+                        <div class="room-contain" id="room-reservation-list1">
                         </div>
                     </div>
-                    <div id="room-operation" class="col-lg-8 col-lg-offset-2 text-center navbar-fixed-bottom" style="display:none;">
-
-                        <div></div>
-                        <div>
-                            备注:
-                            <input type="text" placeholder="输入会议主题或说明或..." id="reservation-comment" />
-                        </div>
+                    <div id="room-reservation-list">
                     </div>
                 </div>
             </div>
         </div>
         <%include './user/signup.template.htm'%>
-            <%include './reservation/reservation.template.htm'%>
-                <%include './common/common.js.htm'%>
-                    <script src="/js/home.js?v=<%version%>"></script>
+                <%include './reservation/reservation.list.template.htm'%>
+                    <%include './common/common.js.htm'%>
+                        <script src="/js/home.js?v=<%version%>"></script>
 </body>
+
 </html>
