--- a/app/views/user/signup.template.htm
+++ b/app/views/user/signup.template.htm
@@ -1,14 +1,14 @@
 <script type="text/html" id="template-signup">
-    <div class="col-lg-6 col-lg-offset-3 opacity-80 bg-color-000 padding-30">
-        <h1>欢迎使用</h1>
+    <div class="col-lg-6 col-lg-offset-3 opacity-90 bg-color padding-30 radius">
+        <h1>欢迎使用会议室预订系统</h1>
 
         <h4 class="subtitle">您的IP是：<span id="ip-text"></span></h4>
-        <h2 class="subtitle">请输入您的称呼</h2>
+        <h2 class="subtitle">请输入您的用户名，用户名将与IP绑定！</h2>
 
         <form class="form-inline signup" role="form">
             <div class="form-group">
-                <input type="input" class="form-control" id="binding-name" placeholder="ex: amy.lin" />
-                <a href="javascript:void(0);" id="btn-sign-up" class="btn btn-theme">Sing up NOW</a>
+                <input type="input" class="form-control" id="binding-name" placeholder="请输入您的用户名,例如: amy.lin" />
+                <a href="javascript:void(0);" id="btn-sign-up" class="btn btn-warning" onclick="signup();">确定</a>
             </div>
             <div></div>
         </form>
