--- a/app/views/reservation/reservation.list.template.htm
+++ b/app/views/reservation/reservation.list.template.htm
@@ -23,12 +23,12 @@
 
 <script type="text/html" id="template-reservation-tooltip">
     <ul class="list-group">
-        <li class="list-group-item">会议时间：{{startMinute |minuteFormat}} - {{endMinute |minuteFormat}}</li>
         <li class="list-group-item">预订人：{{userName}}</li>
+        <li class="list-group-item">会议时间：{{startMinute |minuteFormat}} - {{endMinute |minuteFormat}}</li>
         <li class="list-group-item">备注：{{comment}}</li>
         <li class="list-group-item">预订时间：{{createDate}}</li>
         {{if canRevert}}
-        <li class="list-group-item text-warning">(点击可取消预订)</li>
+        <li class="list-group-item text-warning">(点击取消预订)</li>
         {{/if}}
     </ul>
 </script>
@@ -45,15 +45,15 @@
         </div>
         <div class="form-group">
             <label for="txt-reserve-start">开始时间：</label>
-            <input type="text" class="form-control" name="start" placeholder="点击选择时间或手动输入时间，格式09:00" value="" id="txt-reserve-start">
+            <input type="text" class="form-control" name="start" placeholder="选择或手动输入时间，格式09:15" value="" id="txt-reserve-start">
         </div>
         <div class="form-group">
             <label for="txt-reserve-end">结束时间：</label>
-            <input type="text" class="form-control" name="end" placeholder="点击选择时间或手动输入时间，格式09:00" value="" id="txt-reserve-end">
+            <input type="text" class="form-control" name="end" placeholder="选择或手动输入时间，格式09:30" value="" id="txt-reserve-end">
         </div>
         <div class="form-group">
             <label for="txt-reserve-comment">备注</label>
-            <input type="text" class="form-control" name="comment" placeholder="备注" value="" id="txt-reserve-comment">
+            <input type="text" class="form-control" name="comment" placeholder="备注：会议主题、代预订等" value="" id="txt-reserve-comment">
         </div>
     </form>
     <div id="reserve-add-errorMessage" class="text-danger">
