--- a/app/views/user/signup.template.htm
+++ b/app/views/user/signup.template.htm
@@ -4,12 +4,12 @@
         <h4 class="subtitle">您的IP是：<span id="ip-text"></span></h4>
         <h3 class="subtitle">首先，请输入您的称呼，以便让大家知道是您预订了会议室</h3>
 
-        <form class="form-inline signup" role="form" action="#">
+        <div class="form-inline signup" role="form" action="#">
             <div class="form-group">
                 <input type="input" class="form-control" id="binding-name" placeholder="中文名或英文名,例如: 马云、jack.ma" />
                 <a href="javascript:void(0);" id="btn-sign-up" class="btn btn-warning" onclick="signup();">确定</a>
             </div>
             <div></div>
-        </form>
+        </div>
     </div>
 </script>
