--- a/app/views/common/common.head.htm
+++ b/app/views/common/common.head.htm
@@ -1,4 +1,4 @@
 <meta charset="utf-8">
-<title>TUV-SUD 会议室预订系统</title>
+<title>会议室预订系统</title>
 <link rel="icon" href="/img/favicon.png" type="image/png" />
 <link rel="shortcut icon" href="/img/favicon.ico" /> 
